modifiche agli algoritmi già svilppati